fix: 프로시저 호출을 함수 호출로 정정